--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -82,7 +82,7 @@ header.masthead {
   overflow: hidden;
   padding-top: 100px;
   padding-bottom: 7rem;
-  background: linear-gradient(90deg, #ffe082 0%, #ffbadf 100%);
+  background: linear-gradient(90deg, #12cef2 0%, #3900a6 100%);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
@@ -94,7 +94,7 @@ header.masthead {
   overflow: hidden;
   padding-top: 100px;
   padding-bottom: 7rem;
-  background: linear-gradient(90deg, #ffe082 0%, #ffbadf 100%);
+  background: linear-gradient(90deg, #12cef2 0%, #3900a6 100%);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
